--- a/public/aboutKoans.html
+++ b/public/aboutKoans.html
@@ -18,9 +18,9 @@
 			</p>
 		</article>
 		<footer id="footer-aboutKoans" class="clearfix">
-			<a href="today.html">Today's Koan</a>
-			<a href="index.html">Koanify</a>
-			<a href="about.html">About this Page</a>
+			<a href="/today">Today's Koan</a>
+			<a href="/">Koanify</a>
+			<a href="/about">About this Page</a>
 		</footer>
 	</body>
 
