--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
 				<a href='aboutKoans.html'>What is a Koan?</a>
 			</div>
       <div class="bubble" id="bubble-3">
-				<a id="link-1" href='about.html'>About this Page</a>
-				<a id="link-2" href='about.html' hidden>About</a>
+				<a id="link-1" href='/about'>About this Page</a>
+				<a id="link-2" href='/about' hidden>About</a>
 			</div>
     </div>
 	</body>
