--- a/public/today.html
+++ b/public/today.html
@@ -16,9 +16,9 @@
 			</p>
 		</article>
 		<footer id="footer-today" class="clearfix">
-			<a href="about.html">About this Page</a>
-			<a href="index.html">Koanify</a>
-			<a href="aboutKoans.html">About Koans</a>
+			<a href="/about">About this Page</a>
+			<a href="/">Koanify</a>
+			<a href="/aboutKoans">About Koans</a>
 		</footer>
 	</body>
 
