--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 	<body id="start">
     <div id="site-container">
       <div class="bubble" id="bubble-1">
-				<a href='today.html'>Today's Koan</a>
+				<a href='/today'>Today's Koan</a>
 			</div>
       <div class="bubble" id="bubble-2">
-				<a href='aboutKoans.html'>What is a Koan?</a>
+				<a href='/aboutKoans'>What is a Koan?</a>
 			</div>
       <div class="bubble" id="bubble-3">
 				<a id="link-1" href='/about'>About this Page</a>
